changed custom index to elasticsearch index