@@ -1,5 +1,6 @@
 package main.service;
 
+import lombok.extern.slf4j.Slf4j;
 import main.api.response.ErrorResponse;
 import main.api.response.StatisticResponse;
 import main.configuration.ApplicationProperties;
@@ -9,11 +10,17 @@ import main.dto.TotalStatisticDTO;
 import main.engine.GrabberTask;
 import main.engine.HTMLStorage;
 import main.mapper.SiteStatisticsMapper;
-import main.model.Page;
+import main.model.HtmlPage;
 import main.model.Site;
 import main.model.Status;
-import main.repository.*;
+import main.opennlp.OpenNLPLemmatizer;
+import main.repository.HtmlPageRepository;
+import main.repository.SiteRepository;
+import org.jsoup.Jsoup;
+import org.jsoup.safety.Safelist;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.elasticsearch.core.SearchHit;
+import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -23,34 +30,29 @@ import java.util.*;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ForkJoinPool;
-import java.util.stream.Collectors;
 
 @Service
-public class IndexSystemServiceImpl implements IndexSystemService{
+@Slf4j
+public class IndexSystemServiceImpl implements IndexSystemService {
 
     private final int cores;
     private final Set<ForkJoinPool> pools;
     private final ApplicationProperties applicationProperties;
     private final SiteRepository siteRepository;
-    private final PageRepository pageRepository;
-    private final FieldRepository fieldRepository;
-    private final IndexRepository indexRepository;
-    private final LemmaRepository lemmaRepository;
-    private final SiteStatisticsMapper siteStatisticsMapper;
     private final ExecutorService threadPools;
+    private final HtmlPageRepository htmlPageRepository;
+    private final SiteStatisticsMapper siteStatisticsMapper;
+    private final OpenNLPLemmatizer openNLPLemmatizer;
 
 
     @Autowired
-    public IndexSystemServiceImpl(ApplicationProperties sitesConfig, SiteRepository siteRepository, PageRepository pageRepository,
-                                  FieldRepository fieldRepository, IndexRepository indexRepository, LemmaRepository lemmaRepository,
-                                  SiteStatisticsMapper siteStatisticsMapper) {
+    public IndexSystemServiceImpl(ApplicationProperties sitesConfig, SiteRepository siteRepository, HtmlPageRepository htmlPageRepository,
+                                  SiteStatisticsMapper siteStatisticsMapper, OpenNLPLemmatizer openNLPLemmatizer) {
         this.applicationProperties = sitesConfig;
         this.siteRepository = siteRepository;
-        this.pageRepository = pageRepository;
-        this.fieldRepository = fieldRepository;
-        this.indexRepository = indexRepository;
-        this.lemmaRepository = lemmaRepository;
+        this.htmlPageRepository = htmlPageRepository;
         this.siteStatisticsMapper = siteStatisticsMapper;
+        this.openNLPLemmatizer = openNLPLemmatizer;
         cores = Runtime.getRuntime().availableProcessors();
         pools = new HashSet<>();
         threadPools = Executors.newFixedThreadPool(cores + 1);
@@ -70,12 +72,10 @@ public class IndexSystemServiceImpl implements IndexSystemService{
                 Site site;
                 if (optionalSite.isPresent()) {
                     site = optionalSite.get();
-                    List<Page> pages = site.getPage();
-                    pages.forEach(this::deletePage);
-                    site = siteRepository.findSiteByName(name).get();
+                    htmlPageRepository.deleteAllBySiteName(site.getName());
                     site.setStatus(Status.INDEXING);
                 } else {
-                    site = new Site(Status.INDEXING, LocalDateTime.now(), null, url, name);
+                    site = new Site(Status.INDEXING, LocalDateTime.now(), null, url, name, 0L, 0L);
                 }
                 siteRepository.save(site);
                 pools.add(addSite(url, site, cores / sitesProperties.size()));
@@ -102,27 +102,26 @@ public class IndexSystemServiceImpl implements IndexSystemService{
     @Override
     public ErrorResponse indexPage(String url) {
         ErrorResponse errorResponse = new ErrorResponse();
-        String pagePath = url.replaceAll("(https?://[^/:]+)?", "");
-        String siteUrl = url.replaceAll(pagePath, "");
+        String htmlPagePath = url.replaceAll("(https?://[^/:]+)?", "");
+        String siteUrl = url.replaceAll(htmlPagePath, "");
         Optional<Site> siteByUrl = siteRepository.findSiteByUrl(siteUrl);
-        if (siteByUrl.isPresent()) {
-            Site site = siteByUrl.get();
-            Optional<Page> pageByPath = pageRepository.findPageByPath(pagePath);
-
-            if (pageByPath.isPresent()) {
-                Page page = pageByPath.get();
-                deletePage(page);
-            }
-            try {
-                new GrabberTask(new HTMLStorage(fieldRepository, site, lemmaRepository, indexRepository, applicationProperties),
-                        site.getUrl(), url, new HashSet<>(), site, pageRepository, siteRepository).parseDoc(url);
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
-            errorResponse.setResult(true);
-        } else {
-            errorResponse.setError("Данная страница находится за переделами сайтов, указанных в конфигурационном файле");
-        }
+        siteByUrl.ifPresentOrElse(site -> {
+                    Optional<HtmlPage> htmlPageByPath = htmlPageRepository.findPageByPath(htmlPagePath);
+                    htmlPageByPath.ifPresent(htmlPage -> {
+                        htmlPageRepository.deleteByPath(htmlPage.getPath());
+                        HtmlPage newHtmlPage = new HtmlPage();
+                        try {
+                            newHtmlPage = new GrabberTask(new HTMLStorage(applicationProperties),
+                                    site.getName(), url, new HashSet<>(), site, htmlPageRepository, siteRepository).parseDoc(url);
+                        } catch (IOException e) {
+                            log.error("Ошибка ввода-вывода: {}", e.getMessage());
+                        }
+                        site.setLemmasCount(site.getLemmasCount() - countLemmas(htmlPage.getContent()) + countLemmas(newHtmlPage.getContent()));
+                        siteRepository.save(site);
+                    });
+                    errorResponse.setResult(true);
+                },
+                () -> errorResponse.setError("Данная страница находится за переделами сайтов, указанных в конфигурационном файле"));
         return errorResponse;
     }
 
@@ -130,10 +129,10 @@ public class IndexSystemServiceImpl implements IndexSystemService{
     public StatisticResponse getStatistics() {
         StatisticResponse statisticResponse = new StatisticResponse();
         List<Site> sites = siteRepository.findAll();
-        List<SiteStatisticDTO> statisticDTOS = sites.stream().map(siteStatisticsMapper::toDTO).collect(Collectors.toList());
+        List<SiteStatisticDTO> statisticDTOS = sites.stream().map(siteStatisticsMapper::toDTO).toList();
         TotalStatisticDTO totalStatisticDTO = new TotalStatisticDTO(sites.size()
-                , statisticDTOS.stream().mapToInt(SiteStatisticDTO::getPages).sum()
-                , statisticDTOS.stream().mapToInt(SiteStatisticDTO::getLemmas).sum()
+                , statisticDTOS.stream().mapToLong(SiteStatisticDTO::getPages).sum()
+                , statisticDTOS.stream().mapToLong(SiteStatisticDTO::getLemmas).sum()
                 , isIndexing());
         StatisticDTO statisticDTO = new StatisticDTO(totalStatisticDTO, statisticDTOS);
 
@@ -144,16 +143,24 @@ public class IndexSystemServiceImpl implements IndexSystemService{
 
     private ForkJoinPool addSite(String url, Site site, int workers) {
         ForkJoinPool forkJoinPool = new ForkJoinPool(workers);
+        String siteName = site.getName();
         threadPools.execute(() -> {
-            try {
-                forkJoinPool.invoke(new GrabberTask(new HTMLStorage(fieldRepository, site, lemmaRepository, indexRepository, applicationProperties),
-                        url, url + "/", new HashSet<>(Set.of(url + "/")), site, pageRepository, siteRepository));
-                site.setStatus(Status.INDEXED);
+            forkJoinPool.invoke(new GrabberTask(
+                    new HTMLStorage(applicationProperties),
+                    site.getName(),
+                    url + "/",
+                    new HashSet<>(Set.of(url + "/")),
+                    site,
+                    htmlPageRepository,
+                    siteRepository));
+            forkJoinPool.shutdown();
+            threadPools.submit(() -> {
+                site.setLemmasCount(countLemmasBySiteName(siteName));
                 siteRepository.save(site);
-                forkJoinPool.shutdown();
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
+            });
+            site.setStatus(Status.INDEXED);
+            site.setHtmlPagesCount(htmlPageRepository.countBySiteName(siteName));
+            siteRepository.save(site);
         });
         return forkJoinPool;
     }
@@ -165,10 +172,17 @@ public class IndexSystemServiceImpl implements IndexSystemService{
         return pools.stream().noneMatch(ForkJoinPool::isTerminated);
     }
 
-    private void deletePage(Page page) {
-        List<Integer> lemmasIds = pageRepository.lemmasIds(page);
-        indexRepository.deleteAllByPage(page);
-        lemmaRepository.deleteLemmasByIds(lemmasIds);
-        pageRepository.delete(page);
+    private int countLemmas(String content) {
+        return new HashSet<>(Arrays.asList(openNLPLemmatizer.getLemmas(content))).size();
+    }
+
+    private long countLemmasBySiteName(String siteName) {
+        SearchHits<HtmlPage> htmlPageSearchHits = htmlPageRepository.findBySiteName(siteName);
+        Set<String> lemmas = new HashSet<>();
+
+        for (SearchHit<HtmlPage> searchHit : htmlPageSearchHits) {
+            lemmas.addAll(Arrays.asList(openNLPLemmatizer.getLemmas(Jsoup.clean(searchHit.getContent().getContent(), Safelist.none()))));
+        }
+        return lemmas.size();
     }
 }
